# dspy_rag

./: .gitignore  README.md  pyproject.toml
dspy_rag/: __init__.py  cli.py  custom_cli.py  embeddings.py  indexing.py  no_rag.py  rag.py  tui.py
knowledge/: api_notes.txt  config.yaml  overview.md
knowledge/specs/: review.md
tests/: test_indexing.py
