[project]
name = "dspy-rag"
version = "0.1.0"
description = "Folder-based RAG TUI using DSPy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["rag", "dspy", "tui", "retrieval", "cli"]

dependencies = [
  "dspy-ai>=3.1.2",
  "prompt-toolkit>=3.0.43",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[project.scripts]
dspy_rag = "dspy_rag.cli:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dspy_rag*"]
exclude = ["knowledge*", "tests*"]
